--- a/index.html
+++ b/index.html
@@ -311,13 +311,13 @@
             <p>การคำนวณหาค่าเกลือ</p>
             
             <div class="social-icons">
-    <a href="https://www.instagram.com/yourusername1" title="Instagram 1">
+    <a href="https://www.instagram.com/r_tchavvat/" title="Instagram 1">
         <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram 1">
     </a>
-    <a href="https://facebook.com/yourusername" title="Facebook">
+    <a href="https://www.facebook.com/rach.wat.hn.hnu.sastr" title="Facebook">
         <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook">
     </a>
-    <a href="https://line.me/ti/p/yourlineid" title="Line">
+    <a href="https://line.me/ti/p/21514161" title="Line">
     <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/LINE_logo.svg" alt="Line">
     </a>
 </div>
@@ -379,4 +379,3 @@
     </script>
 </body>
 </html>
-
