--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 </div>
 
             
-            <a href="#" class="btn">Calculate</a>
+            <a href="Calculate/" class="btn">Calculate</a>
         </div>
 
         
